k8s/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: iiisconnect-gateway
  namespace: weixu
  labels:
    app: iiisconnect-gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: iiisconnect-gateway
